metrics/ingress_grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: grafanatriangleapp.rafaeltorices.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 3000
  tls:
    - hosts:
        - grafanatriangleapp.rafaeltorices.com
      secretName: grafana-secret-tls
